[package]
name = "gdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
google-drive3 = { git = "https://github.com/Byron/google-apis-rs" }
home = "0.5.4"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tempfile = "3.3.0"
tokio = { version = "1.23.0", features = ["full"] }
