[package]
name = "gdrive"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
exponential-backoff = "1.1.0"
google-drive3 = { git = "https://github.com/Byron/google-apis-rs" }
home = "0.5.4"
human_bytes = { version = "0.4.1", default-features = false }
md5 = "0.7.0"
mime = "0.3.16"
mime_guess = "2.0.4"
rustc_version_runtime = "0.2.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tempfile = "3.3.0"
tokio = { version = "1.23.0", features = ["full"] }
